fix: change display property from unset to flex for data matrix visibility

--- a/src/encoded/static/scss/encoded/modules/_charts.scss
+++ b/src/encoded/static/scss/encoded/modules/_charts.scss
@@ -1428,7 +1428,7 @@ body[data-path="/statistics"] {
                 }
                 display: none;
                 &:has(.data-matrix:not([data-files-count="0"])) {
-                    display: unset;
+                    display: flex;
                 }
             }
         }
